# Dungeon_Backend

./: .gitignore  Dockerfile  README.md  api.entrypoint.sh  config.yaml  docker-compose.yml  justfile  lots.db  pyproject.toml  requirements.txt
api/: main.py
api/routes/: bot.py
app/: config.py  database.py  logger.py  main.py  vk.py
database/: models.py  repository.py  services.py
docker/compose/: base.yaml  dev.yaml  prod.yaml
docker/services/: api.Dev.Dockerfile  api.Dockerfile
logics/: botmanager.py  lots_bot.py  vk_api.py  vk_deleter.py
migration/: env.py
migration/versions/: 5e66ddbb7109_init.py
old APP/: config.py  database.py  logger.py  main.py  vk.py
shared/: config.py  context.py  logger.py  schemas.py
