[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    { name = "Ncesam", email = "rybushkin09@bk.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "jurigged (>=0.6.1,<0.7.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "poyo (>=0.5.0,<0.6.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "loguru (>=0.7.3); python_version >= '3.5' and python_version < '4.0'",
    "uvicorn (>=0.35.0,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
